--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@repo/ui": "workspace:*",
+    "clsx": "^2.1.1",
     "next": "14.2.8",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "14.2.8",
